Closed Bug 1743474 Opened 4 years ago Closed 4 years ago

Video in fullscreen windowed mode scales the video image incorrectly

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
macOS
defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
thunderbird_esr91 --- unaffected
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- verified
firefox97 --- verified

People

(Reporter: bradwerth, Assigned: bradwerth)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to Reproduce:

  1. View a YouTube video such as https://www.youtube.com/watch?v=aqz-KE-bpKQ.
  2. Start the movie playing, then pause it.
  3. Click the fullscreen window widget in the window toolbar (the round green button in the upper left).

Expected Results:
The window expands to fill the screen, and the video is sized correctly in its frame.

Actual Results:
The window expands, but the video is scaled as if it is also filling the screen.

The problem here is that the NativeLayerCA::SetRootWindowIsFullscreen call triggers the conditions that allow an OnlyVideo update, which simultaneously isn't picking up the fact that the video layer size has changed. The fix will be ensuring that the change to the video layer size is properly noted in a mutation bit.

Most of the time, layer mutations that recreate layers also set their size.
A fullscreen transition can create a layer mutation without setting the size
mutation bit. This change ensures that newly-created layers are always sized.

Pushed by bwerth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/de26032fc7b9 Make NativeLayerCA set size and scale when recreating layers. r=mstange
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Should we consider taking this on Beta?

Flags: needinfo?(bwerth)

Comment on attachment 9253321 [details]
Bug 1743474: Make NativeLayerCA set size and scale when recreating layers.

Beta/Release Uplift Approval Request

  • User impact if declined: macOS users viewing video and then transitioning to fullscreen will have improperly scaled video.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a minimal correctness change that has very little possibility of causing new issues to appear.
  • String changes made/needed:
Flags: needinfo?(bwerth)
Attachment #9253321 - Flags: approval-mozilla-beta?

Comment on attachment 9253321 [details]
Bug 1743474: Make NativeLayerCA set size and scale when recreating layers.

Approved for 96.0b5

Attachment #9253321 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I was able to reproduce the issue on Mac 10.13 using NB 96.0a1(29-11-2021).
Verified as fixed on Mac 10.13 using NB 97.0a1(20211215091158) and Beta 96.0b5(20211214203716).

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: