Bug 1743474: Make NativeLayerCA set size and scale when recreating layers. r=mstange

Most of the time, layer mutations that create a layer also set all the other
attributes of the layer. A fullscreen transition can create a layer mutation
that doesn't set any other mutation bits and therefore doesn't fully
initialize the layer. The fullscreen setter shouldn't have to worry about
this, so we change the layer creation code to have an override that acts as if
all the mutation bits have been set.

Differential Revision: https://phabricator.services.mozilla.com/D132639